# SSLBoard-desktop

./: AGENTS.md  Makefile  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
docs/: current_status.md  db.md  desktop_clm_agent_sslboard_cloud_integration_prd.md  functional.md  macos-build.md  other.md  rotation.md  rust-review.md  steps.md  technical.md  test-scenarios.md  ui-refactor-comparison.md  ui-review.md  windows-build.md
openspec/: project.md
src/: AGENTS.md  App.tsx  index.css  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: domain.rs  lib.rs  main.rs
src-tauri/src/core/: commands.rs  types.rs
src-tauri/src/core/commands/: dns_challenge.rs  dns_provider_creation.rs  dns_provider_helpers.rs  dns_provider_management.rs  dns_provider_testing.rs  dns_provider_validation.rs  dns_providers.rs  dns_validation.rs  export.rs  inventory.rs  issuance.rs  issuers.rs  misc.rs  mod.rs  preferences.rs  secrets.rs
src-tauri/src/distribution/: export.rs
src-tauri/src/issuance/: acme.rs  acme_workflow.rs  dns.rs  dns_providers.rs  flow.rs  issuer.rs  mod.rs
src-tauri/src/issuance/dns_providers/: base.rs  cloudflare.rs  digitalocean.rs  http.rs  mod.rs  retry.rs  route53.rs  testing.rs
src-tauri/src/issuance/legacy/: acme_issuer.rs
src-tauri/src/secrets/: biometric_store.rs  keyring_store.rs  manager.rs  metadata.rs  mod.rs  store.rs  types.rs  vault.rs
src-tauri/src/storage/: db.rs  dns.rs  inventory.rs  issuer.rs  migrations.rs  mod.rs  preferences.rs
src-tauri/tests/: integration.rs
src-tauri/tests/integration/dns_providers/: cloudflare_test.rs  digitalocean_test.rs  mod.rs  test_utils.rs
src/components/: logo.tsx  page-header.tsx  theme-provider.tsx
src/hooks/: useDnsProviderManager.ts  useDnsProviderTokenTest.ts  useExportDestination.ts  useIssuerOptions.ts  useManagedIssuanceFlow.ts  useProviderPreview.ts  useSecretReferences.ts  useVaultControls.ts
src/lib/: certificates.ts  dns-providers.ts  dns.ts  (+5 more)
(+194 files in other folders)
