[package]
name = "sslboard-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sslboard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ACME client for Let's Encrypt / public certificate issuance
acme-lib = "0.9"  # Latest stable: 0.9.1

# PKI / Certificate operations
rcgen = "0.13"  # Certificate and CSR generation
x509-parser = "0.18"  # X.509 certificate parsing
pem = "3.0"  # PEM encoding/decoding
pkcs12 = "0.1"  # PFX/PKCS#12 export for Windows

# Secret storage (OS keychain adapters)
keyring = "2.3"  # Cross-platform: macOS Keychain, Windows Credential Vault, Linux Secret Service

# Kubernetes client for distribution
kube = { version = "0.92", features = ["runtime", "client"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }  # Kubernetes API version (v1.30 is recent stable)

# Metadata storage (non-secret)
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite for certificate inventory, audit log

# Async runtime (Tauri uses tokio, but we may need additional features)
tokio = { version = "1", features = ["full"] }

# HTTP client for DNS provider APIs
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time/date handling for certificate expiry, audit logs
chrono = { version = "0.4", features = ["serde"] }

